    possibly ignored in "search".
  - [Jul 2, 99] Fixed bug: importing GeneWeb base from old version passing
    by a GEDCOM file did not work if the current directory held spaces.
  - [Jul 2, 99] Changed names of html files to hold 8 characters maximum
    and 3 characters for the extension, to be unzippable by "pkunzip".

* Gedcom to GeneWeb (ged2gwb)
  - [Jul 2, 99] Recognizes the dates of the form "FROM..TO..".

* GeneWeb to Gedcom (gwb2ged)
  - [Jul 2, 99] Generates dates of the form "FROM..TO.." for titles.

* Lexicon (lang/lexicon.txt) and Welcome pages (*/start.txt)
  - [Jun 3, 99] Updated Danish phrases (Hans Albeck)

GeneWeb version 2.04
--------------------

* Setup program
  - [Jun 28, 99] Fixed bug: did not work for directories holding spaces.
  - [Jun 19, 99] Changed GEDCOM import menu to reflect new option "-charset"
    of "ged2gwb" (see below in section "Gedcom to GeneWeb").
  - [Jun 18, 99] Added a color combination in the provided palette
    whiteyellow, black, bluegreen and brown (thanks to Hans Albeck)

* GeneWeb Daemon/CGI (gwd)
  - [Jun 30, 99] Added the ability to enter a Sosa number in the welcome page
    when navigating with someone as Sosa reference number (still available from
    its "ancestors" page).
  - [Jun 30, 99] In relationship links, display common ancestors in a more
    canonical order.
  - [Jun 28, 99] Due to optimization in consanguinity computing (see below),
    the answer time of relationship computing for persons without relationship
    links is generally faster (it answers: "no relationship links" faster).
  - [Jun 26, 99] Added the ability to access persons having composed surnames
    by subparts of their surname: e.g. "Josephine Tascher de La Pagerie" can
    now be found by typing just "Josephine Tascher" or "Josephine de La
    Pagerie".
  - [Jun 25, 99] Added short (horizontal) display for surnames by
    alphabetic order + ability to cancel GeneWeb links (for creation of
    static HTML pages).